--- a/arch/arm/configs/cyanogenmod_p505_p506_defconfig
+++ b/arch/arm/configs/cyanogenmod_p505_p506_defconfig
@@ -389,7 +389,7 @@ CONFIG_MSM_SMD_PKG4=y
 CONFIG_MSM_SMD_DEBUG=y
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
-CONFIG_MSM_RESET_MODEM=y
+# CONFIG_MSM_RESET_MODEM is not set
 CONFIG_MSM_SMD_LOGGING=y
 CONFIG_MSM_SMD_NMEA=y
 CONFIG_MSM_SMD_TTY=y
@@ -432,7 +432,7 @@ CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
 CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_MODEM is not set
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
-CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
+# CONFIG_MSM_IDLE_WAIT_ON_MODEM is not set
 # CONFIG_MSM_SCM is not set
 # CONFIG_MSM_TZ_LOG is not set
 # CONFIG_MSM_DIRECT_SCLK_ACCESS is not set
